# axum-template

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.yaml  build.rs  cliff.toml  deny.toml
.github/workflows/: build.yml
docs/: auth.md  rbac.md
fixtures/: private_key.pem  public_key.pem  test_data.sql
migrations/: 20240725011950_create_users_table.sql  20240731130501_rbac.sql  20240805123718_initial_admin_user.sql  20240806000001_username_unique.sql  20240806000002_fix_view_reports_typo.sql
rest_client/: auth.rest  user.rest
src/: lib.rs  main.rs
src/common/: auth.rs  config.rs  errors.rs  mod.rs
src/modules/: mod.rs
src/modules/auth/: dto.rs  handlers.rs  middleware.rs  mod.rs  services.rs  tests.rs
src/modules/common/: config.rs
src/modules/health/: handlers.rs  mod.rs
src/modules/users/: dto.rs  entity.rs  handlers.rs  mod.rs  services.rs  tests.rs
