[package]
edition = "2021"
license = "MIT"
name = "axum-template"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
argon2 = {version = "0.5.3", features = ["std"]}
axum = {version = "0.7.5", features = ["query", "http2", "tracing", "multipart"]}
chrono = {version = "0.4.38", features = ["serde"]}
futures = "0.3.30"
serde = {version = "1.0.204", features = ["derive"]}
serde_yaml = "0.9.34"
sqlx = {version = "0.7", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"]}
thiserror = "1.0.63"
tokio = {version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

[build-dependencies]
anyhow = "1.0.86"
jwt-simple = "0.12.9"

[dev-dependencies]
axum-extra = "0.9.3"
hyper = {version = "1.4.1", features = ["http2", "client", "server"]}
reqwest = {version = "0.12.5", features = ["json"]}
serde_json = "1.0.120"
serial_test = "3.1.1"
sqlx-db-tester = {version = "0.4.2"}
tower-http = {version = "0.5.2", features = ["compression-full", "fs", "trace"]}

# NOTICE: sqlx-db-tester only support sqlx 0.7.*, not support 0.8.*, 2024/7/25
