[package]
edition = "2024"
license = "MIT"
name = "axum-template"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
argon2 = {version = "0.5.3", features = ["std"]}
axum = {version = "0.8", features = ["query", "http2", "tracing", "multipart"]}
axum-extra = {version = "0.9.3", features = ["typed-header"]}
chrono = {version = "0.4.38", features = ["serde"]}
futures = "0.3.30"
jwt-simple = "0.12.9"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
serde_yaml = "0.9.34"
sqlx = {version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"]}
thiserror = "1.0.63"
tokio = {version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"]}
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.86"
jwt-simple = "0.12.9"

[dev-dependencies]
axum-extra = "0.9.3"
boring = "4.9.1"
boring-sys = "4.9.1"
reqwest = {version = "0.12.5", default-features = false, features = ["json", "rustls-tls"]}
serde_json = "1.0.120"
serial_test = "3.1.1"
sqlx-db-tester = {version = "0.7.1"}
